<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="goToReadMe"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="268dp"
        android:layout_height="94dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/bangers"
        android:text="@string/main_menu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addPhCallBtn"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:onClick="goToAddAPhoneCall"
        android:text="@string/add_a_phone_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="goToLookUpPhoneBill"
        android:text="@string/look_up_phone_bill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPhCallBtn" />

    <Button
        android:id="@+id/button5"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="goToSearchPhoneBill"
        android:text="@string/search_phone_bills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/readMeBtn"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:onClick="goToReadMe"
        android:text="@string/read_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>