<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="searchCallsOnClick"
    tools:context=".SearchPhoneCalls">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".AddPhoneCall">

        <EditText
            android:id="@+id/endTextTimeSearch"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:hint="@string/end_time"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/endAMPMSearch"
            app:layout_constraintTop_toBottomOf="@+id/startTextTimeSearch" />

        <EditText
            android:id="@+id/endDateSearch"
            android:layout_width="136dp"
            android:layout_height="48dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/end_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/endTextTimeSearch"
            app:layout_constraintHorizontal_bias="0.037"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startDateSearch" />

        <TextView
            android:id="@+id/addPhCallTitle"
            android:layout_width="336dp"
            android:layout_height="90dp"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/bangers"
            android:text="@string/search_phone_bills"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/custNameSearch"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_marginTop="88dp"
            android:ems="10"
            android:hint="@string/customer_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhCallTitle" />

        <EditText
            android:id="@+id/startDateSearch"
            android:layout_width="136dp"
            android:layout_height="48dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/start_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custNameSearch" />

        <EditText
            android:id="@+id/startTextTimeSearch"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/start_time"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/startAMPMSearch"
            app:layout_constraintStart_toEndOf="@+id/startDateSearch"
            app:layout_constraintTop_toBottomOf="@+id/custNameSearch" />

        <Button
            android:id="@+id/lookUpBillButton"
            android:layout_width="231dp"
            android:layout_height="48dp"
            android:layout_marginTop="328dp"
            android:onClick="searchCallsOnClick"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhCallTitle" />

        <Switch
            android:id="@+id/startAMPMSearch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:text="@string/start_nam_pm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/custNameSearch" />

        <Switch
            android:id="@+id/endAMPMSearch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:text="@string/end_nam_pm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startAMPMSearch" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>